[package]
edition = "2021"
name    = "blinky"
version = "0.1.0"

[[bin]]
name = "blinky"
path = "./src/bin/main.rs"

[dependencies]
chrono = { version = "0.4.40", default-features = false }
critical-section = "1.2.0"
embedded-graphics = "0.8.1"
esp-hal          = { version = "0.23.1", features = ["esp32s3"] }
esp-println = { version = "0.13.1", features = ["esp32s3"] }
itoa = "1.0.14"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
nb = "1.1.0"
no_std_strings = "0.1.3"
ssd1306 = "0.9.0"
tinybmp = "0.6.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
